--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,8 @@
-
+requests==2.28.1
+beautifulsoup4==4.11.1
+pandas==1.5.0
+dateparser==1.1.2
+spacy==3.4.1
+uvicorn==0.18.2
+fastapi==0.85.1
+pydantic==1.10.2
